Ver.1.7.5:
+ added scrollbar to configuration interface
+ added AC lines configuration

Ver.1.7.4:
+ added support more than 10 tags in cpu, cpuclock, hdd, hddtemp, temp labels
- format bug fixes
* changes in custom uptime format

Ver.1.7.3:
+ added tags $memgb, $swapgb
+ added readme directory
+ added french translation (@Mermouy)
- fix tooltip for custom uptime format
- fix #12
* more refactoring to the god of refactoring
* network device update interval now is 30*interval
* $swap, $swapmb and $swapgb tags now work simultaneously ($mem* tags too)
* player_name now has str type

Ver.1.7.2:
+ added tags $dd, $d, $hh, $h, $mm, $m to custom uptime format
+ added scalling to tooltips
+ added dataengine configuration from ptm
+ added custom command to dataengine
- removed custom command from ptm
- removed tags $ds, $hs, $ms

Ver.1.7.1:
- removed error label
* fix bug with zero values in tooltip

Ver.1.7.0:
+ added support of several tags in temperature label
+ added tags $cpuN, $cpuclN, $hddN, $tempN, $hddtempN, $up, $down
+ added label with custom command
+ added tooltips for CPU, CPU clock, memory, swap and network labels
- removed tags @@...@@, $temp, $ccpu, $ccpucl, $net
* changes in settings
* ptm now does not require net-tools
* refactoring

Ver.1.6.1:
+ added support of several devices in hddtemp label
- fixed #6

Ver.1.6.0:
+ added $custom tag to time and uptime labels (#8)
+ russian translation
- fixed #6, #10
* changed license to GPLv3
* changed project build

Ver.1.5.3:
+ added $album, $progress and $time tags to player label (#7)
- fixed zero swap

Ver.1.5.2:
+ added $isotime, $shorttime and $longtime tags to time label

Ver.1.5.1:
+ added time label

Ver.1.5.0:
+ added player label

Ver.1.4.0:
+ added notifications

Ver.1.3.6:
- fixed #1, #2

Ver.1.3.5:
- fix bug with definition network device

Ver.1.3.4:
+ added double click event
+ added auto selection of network device
- fixed yet another plasma crash

Ver.1.3.3:
* edited reading temperature device
