@@ -1,6 +1,7 @@
 Вер.1.7.5:
 + добавлены скроллбары в конфигурационный интерфейс
 + добавлена настройка значений AC
++ добавлены теги $hddmbN, $hddgbN
 
 Вер.1.7.4:
 + добавлена поддержка более чем 10 тэгов в полях cpu, cpuclock, hdd, hddtemp, temp
