@@ -186,7 +186,6 @@ TODO (wish list)
 ----------------
 * data labels on tooltip
 * package manager support
-* hddmb support
 * ps count and ps support
 
 Links
