@@ -1,6 +1,7 @@
 Ver.1.7.5:
 + added scrollbar to configuration interface
 + added AC lines configuration
++ added $hddmbN, %hddgbN tags
 
 Ver.1.7.4:
 + added support more than 10 tags in cpu, cpuclock, hdd, hddtemp, temp labels
